# chess

./: .gitignore  CMakeLists.txt  chessConfig.h.in  compile_commands.json  flake.nix
examples/: example_engine.cpp  example_program.cpp
include/: Defs.hpp  Uci.hpp  bitboard.hpp  board.hpp  chess.hpp  engine.hpp  engine_handler.hpp  fen.hpp  flags.hpp  hash.hpp  moveGenerator.hpp  moves.hpp  timer.hpp  transpositionTable.hpp
performance/: bench.cpp
src/: Uci.cpp  bitboard.cpp  board.cpp  chess.cpp  engine.cpp  engine_handler.cpp  fen.cpp  flags.cpp  hash.cpp  magicGenerator.cpp  moveGenerator.cpp  moves.cpp  timer.cpp  transpositionTable.cpp
tests/: CMakeLists.txt  bitboard_tests.cpp  board_state_tests.cpp  board_tests.cpp  engine_handler_tests.cpp  engine_tests.cpp  flag_tests.cpp  hash_tests.cpp  moveGenerator_long_tests.cpp  moveGenerator_quick_tests.cpp  moveGenerator_tests.cpp  moves_tests.cpp  run_tests.cpp
